# AEGIS-DocIntel

./: .gitignore  Architecture.md  DocumentEngine.md  LICENSE  MemoryEngine.md  RAGEngine.md  README.md  Systems.md  TokenEconomy.md  Workflow.md  repository-fixes.patch  requirements.lock.txt  requirements.txt  start.py
amdi-os/: Dockerfile  pyproject.toml
amdi-os/benchmarks/: runner.py
amdi-os/benchmarks/ablation/: __init__.py
amdi-os/benchmarks/amdi/: __init__.py
amdi-os/benchmarks/baseline/: __init__.py  token_rag.py
amdi-os/benchmarks/categories/: accuracy_bench.py  hallucination_bench.py
amdi-os/benchmarks/framework/: runner.py
amdi-os/benchmarks/metrics/: __init__.py  retrieval.py
amdi-os/benchmarks/results/: accuracy_20260619_212438.jsonl  accuracy_20260619_212439.jsonl  accuracy_20260619_214021.jsonl  accuracy_20260619_214949.jsonl  accuracy_20260620_091255.jsonl  accuracy_20260620_220813.jsonl  accuracy_20260620_222218.jsonl  accuracy_20260621_112751.jsonl
amdi-os/benchmarks/statistics/: significance.py
amdi-os/dashboard/src/: index.css
amdi-os/dashboard/src/pages/: AnalyticsPage.tsx
amdi-os/data/: annotations.db
amdi-os/docs/math/: Formulations.md  Mathematics.md  Optimization.md
amdi-os/docs/research/: Objectives.md  ProblemStatement.md
amdi-os/mios/engines/: __init__.py
amdi-os/mios/engines/decision/: decision_engine.py
amdi-os/mios/engines/economics/: economics_engine.py
amdi-os/mios/engines/markov/: markov_engine.py
amdi-os/mios/engines/optimization/: optimization_engine.py
amdi-os/mios/engines/rl/: rl_engine.py
amdi-os/research/: InformationTheory.md  MathematicalFoundations.md  OptimizationTheory.md  theorems.md
amdi-os/scratch/: debug_ingest.py
amdi-os/src/: __init__.py
amdi-os/src/ael/connectors/: deepseek.py  (+1 more)
amdi-os/src/annotations/: models.py
amdi-os/src/connectors/: connector_base.py  deepseek_connector.py  exceptions.py
amdi-os/src/core/: normalized_document.py
amdi-os/src/engines/: recurrence.py  semantic.py
amdi-os/src/export/: json_exporter.py  markdown_exporter.py  verification.py
amdi-os/src/ingestion/: base.py  image_loader.py
amdi-os/src/math_concepts/: control_theory.py  statistics.py
amdi-os/src/models/: document_object.py  page_object.py
amdi-os/src/normalization/: __init__.py  cleaner.py
amdi-os/src/verification/: fact_verifier.py  verification_engine.py
amdi-os/src/workflows/: __init__.py  batch_workflow.py
amdi-os/tests/integration/: test_pipeline.py
amdi-os/tests/unit/: test_benchmarks.py  test_export.py  test_frequency.py  test_info_physics.py  test_math_framework.py  test_recurrence.py  test_template.py
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/src/: amdi_client.cpp
sdk/python/: README.md  pyproject.toml
sdk/python/amdi_os/: __init__.py  async_client.py  client.py  exceptions.py  models.py  utils.py
sdk/python/tests/: test_sdk.py
(+1649 files in other folders)
