[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amdi-os"
version = "1.0.0"
description = "Adaptive Mathematical Document Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AEGIS Research", email = "research@aegis.ai" }]
license = { text = "Apache-2.0" }

dependencies = [
    # Core
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tenacity>=8.2",
    "httpx>=0.27",
    # Parsing
    "pymupdf>=1.24",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "Pillow>=10.2",
    # OCR
    "pytesseract>=0.3.10",
    # ML
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "networkx>=3.2",
    "sentence-transformers>=2.7",
    # Vector
    "faiss-cpu>=1.8",
    "redis>=5.0",
    # LLM
    "openai>=1.30",
    "anthropic>=0.25",
    "tiktoken>=0.6",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "streamlit>=1.32",
    # Observability
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "locust>=2.27",
    "ruff>=0.3",
    "black>=24.2",
    "mypy>=1.9",
]

[project.scripts]
amdi = "src.cli:main"
amdi-server = "src.api.api_server:run"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
