[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amdi-os"
version = "1.0.0"
description = "Official Python SDK for AMDI-OS"
readme = "README.md"
authors = [
    { name = "AMDI-OS Development Team", email = "sdk@amdi-os.com" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/amdi-os/amdi-os"
Documentation = "https://docs.amdi-os.com"
